force-app/main/default/objects/Control_Rental_Income__c/Control_Rental_Income__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Control setting for RentalIncome trigger</description>
    <label>Control Rental Income</label>
</CustomObject>