force-app/main/default/objects/Control_Rental_Income__c/fields/Trigger_Disable_After_Insert__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Disable_After_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Disable After Insert</label>
    <type>Checkbox</type>
</CustomField>