force-app/main/default/objects/Control_Rental_Income__c/fields/Trigger_Disable_All_Operations__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Disable_All_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Disable All Operations</label>
    <type>Checkbox</type>
</CustomField>